@@ -81,8 +81,8 @@ define('_CO_WGGALLERY_ALBUMS_COUNT', 'Number of albums');
 define('_CO_WGGALLERY_ALBUM', 'Album');
 define('_CO_WGGALLERY_ALBUMS', 'Albums');
 define('_CO_WGGALLERY_ALBUMS_DESC', 'wgGallery is a XOOPS module for presenting images in albums and categories');
-define('_CO_WGGALLERY_ALBUM_CAT', 'Category');
-define('_CO_WGGALLERY_ALBUM_NB_CATS', 'album(s) in this category');
+define('_CO_WGGALLERY_ALBUM_COLL', 'Collection');
+define('_CO_WGGALLERY_ALBUM_NB_COLL', 'album(s) in this collection');
 define('_CO_WGGALLERY_ALBUM_NB_IMAGES', 'image(s) in this album');
 define('_CO_WGGALLERY_ALBUM_NO_IMAGES', 'Album contains no images');
 define('_CO_WGGALLERY_ALBUM_ID', 'Id');
