@@ -81,8 +81,8 @@ define('_CO_WGGALLERY_ALBUMS_COUNT', 'Anzahl der Alben');
 define('_CO_WGGALLERY_ALBUM', 'Album');
 define('_CO_WGGALLERY_ALBUMS', 'Alben');
 define('_CO_WGGALLERY_ALBUMS_DESC', 'wgGallery ist ein XOOPS-Modul für die Präsentation Ihrer Bilder in Alben und Kategorien');
-define('_CO_WGGALLERY_ALBUM_CAT', 'Kategorie');
-define('_CO_WGGALLERY_ALBUM_NB_CATS', 'Alben in dieser Kategorie');
+define('_CO_WGGALLERY_ALBUM_COLL', 'Albensammlung');
+define('_CO_WGGALLERY_ALBUM_NB_COLL', 'Alben in dieser Sammlung');
 define('_CO_WGGALLERY_ALBUM_NB_IMAGES', 'Bilder in diesem Album');
 define('_CO_WGGALLERY_ALBUM_NO_IMAGES', 'Album enthält keine Bilder');
 define('_CO_WGGALLERY_ALBUM_ID', 'Id');
